--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,27 +1,31 @@
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Copy Cat Games</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Smokum&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
-
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>
-          <a href="/">Copy Cat Games</a>
-        </h1>
-      </header>
-      <main>
-        {{{body}}}
-      </main>
-      <footer>
-        Thanks for visiting!
-      </footer>
-    </div>
-
+    <header>
+      <h1><a href="/">Copy Cat Games</a>
+      </h1>
+      <nav>
+        <h2><a href="/">Forums</a></h2>
+        <h2><a href="/">Store</a></h2>
+        <h2><a href="/">Login</a></h2>
+      </nav>
+    </header>
+    <main>
+      {{{body}}}
+    </main>
+    <footer>
+      <h6>Created By Casey, Kole, John, and Amir</h6>
+    </footer>
   </body>
-
 </html>
