--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-{{#each articles as |article|}}
+{{!-- {{#each articles as |article|}}
   <div class="games">
     <img
       class="images-art"
@@ -9,4 +9,4 @@
       <a href="{{article.article_text}}" target="_blank">{{article.title}}</a>
     </h3>
   </div>
-{{/each}}
+{{/each}} --}}
