--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,6 +58,7 @@ main {
   align-items: center;
   flex-wrap: wrap;
   margin: 20px;
+  text-decoration: none;
 }
 .images-art {
   height: 300px;
@@ -66,10 +67,7 @@ main {
 }
 h3 {
   margin: 10px 0px;
-}
-h3 a {
   color: var(--primary);
-  text-decoration: none;
 }
 footer {
   background-color: var(--primary);
@@ -104,18 +102,42 @@ h6 {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  margin: 10px 0px;
 }
 .form-label {
-  font-size: 2rem;
+  font-size: 1.5rem;
+  padding: 5px;
 }
 .form-input {
   width: 500px;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  border-radius: 10px;
+  padding: 10px;
 }
 .form-button {
   width: 500px;
-  font-size: 2rem;
+  font-size: 1.5rem;
   background-color: var(--primary);
   color: var(--secondary);
+  border-radius: 10px;
+  margin-top: 15px;
+  padding: 10px;
+}
+article {
+  margin: 20px 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+h4 {
+  font-size: 2rem;
+  border-bottom: 5px dotted var(--primary);
+  margin: 20px 0px;
+}
+.article-text {
+  font-size: 1.5rem;
+  line-height: 2;
+  margin: 20px 0px;
+  text-align: justify;
 }
