--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,12 +1,12 @@
 {{#each articles as |article|}}
-  <div class="games">
+  <a class="games" href="/{{id}}">
     <img
       class="images-art"
       src="/images/{{article.imagesarts.0.filename}}"
       alt="{{article.title}}"
     />
     <h3>
-      <a href="{{article.article_text}}" target="_blank">{{article.title}}</a>
+      {{article.title}}
     </h3>
-  </div>
+  </a>
 {{/each}}
