--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,7 +5,7 @@
 }
 :root {
   --primary: black;
-  --secondary: blanchedalmond;
+  --secondary: rgb(237, 237, 237);
 }
 body {
   background-color: var(--secondary);
@@ -49,7 +49,7 @@ main {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  height: 100%;
+  min-height: 100%;
 }
 .games {
   display: flex;
@@ -123,7 +123,7 @@ h6 {
   padding: 10px;
 }
 article {
-  margin: 20px 50px;
+  margin: 20px 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -131,13 +131,42 @@ article {
   flex-wrap: wrap;
 }
 h4 {
+  padding-bottom: 20px;
+  width: 100%;
   font-size: 2rem;
   border-bottom: 5px dotted var(--primary);
   margin: 20px 0px;
+  text-align: center;
+}
+.images-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 25px 0px;
+}
+.images {
+  height: 300px;
+  width: 500px;
+  border-radius: 25px;
 }
 .article-text {
   font-size: 1.5rem;
   line-height: 2;
   margin: 20px 0px;
   text-align: justify;
+}
+.comments {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 50px;
+}
+.comment-text {
+  margin: 20px 0px;
+}
+h5 {
+  font-size: 1.5rem;
 }
