--- a/views/aticles.handlebars
+++ b/views/aticles.handlebars
@@ -3,7 +3,7 @@
   <div class="images-container">
     <img
       class="images"
-      src="/images/{{article.imagesactions.0.filename}}"
+      src="/images/{{article.images.2.filename}}"
       alt="{{article.title}}"
     />
   </div>
@@ -11,7 +11,7 @@
   <div class="images-container">
     <img
       class="images"
-      src="/images/{{article.imagesboxes.0.filename}}"
+      src="/images/{{article.images.1.filename}}"
       alt="{{article.title}}"
     />
   </div>
