--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="login-logout">
-  <form class="form">
+  <form class="login-form">
     <div class="form-label-input">
       <label class="form-label" for="email-login">Email:</label>
       <input class="form-input" type="text" id="email-login" />
@@ -12,7 +12,7 @@
       <button class="form-button" type="submit">Login</button>
     </div>
   </form>
-  <form class="form">
+  <form class="signup-form">
     <div class="form-label-input">
       <label class="form-label" for="username-signup">Username:</label>
       <input class="form-input" type="text" id="username-signup" />
