got log in to work, now I need log out to work

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 {{#each articles as |article|}}
 
-  <a class="games" href="/{{id}}">
+  <a class="games" href="/article/{{id}}">
     <img
       class="images-art"
       src="/images/{{article.images.0.filename}}"
