added a route for store
route in home-routes.js

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
       </h1>
       <nav>
         <h2><a href="/">Forums</a></h2>
-        <h2><a href="/">Store</a></h2>
+        <h2><a href="/store">Store</a></h2>
         {{#if loggedIn}}
           <button id="logout" class="btn-no-style">logout</button>
         {{else}}
