--- a/views/store.handlebars
+++ b/views/store.handlebars
@@ -1,4 +1,4 @@
-{{!-- <a class="games" href="/article/{{id}}">
+<a class="games" href="https://www.miniaturemarket.com/pex2002.html">
     <img
       class="images-art"
       src="/images/Long-Shot-Box.jpg"
@@ -7,4 +7,37 @@
     <h3>
       Long Shot
     </h3>
-</a> --}}
+</a>
+
+<a class="games" href="https://www.miniaturemarket.com/ffgti07.html">
+    <img
+      class="images-art"
+      src="/images/TI-Box.png"
+      alt="twilight imperium"
+    />
+    <h3>
+      twilight imperium
+    </h3>
+</a>
+
+<a class="games" href="https://www.miniaturemarket.com/ffgce01-42.html">
+    <img
+      class="images-art"
+      src="/images/Cosmic-Box.jpg"
+      alt="cosmic box"
+    />
+    <h3>
+      cosmic encounter
+    </h3>
+</a>
+
+<a class="games" href="https://www.miniaturemarket.com/awgaw10pp.html">
+    <img
+      class="images-art"
+      src="/images/Picture-Perfect-Box.png"
+      alt="picture perfect box"
+    />
+    <h3>
+      picture pefect
+    </h3>
+</a>
