trying to render

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -25,7 +25,7 @@
       </nav>
     </header>
     <main>
-      {{{show current threads}}}
+      {{{threads go here}}}
     </main>
     <footer>
       <h6>Created By Casey, Kole, John, and Amir</h6>
@@ -35,3 +35,4 @@
     {{/if}}
   </body>
 </html>
+
