--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
       <h1><a href="/">Copy Cat Games</a>
       </h1>
       <nav>
-        <h2><a href="/">Forums</a></h2>
+        <h2><a href="/forum">Forums</a></h2>
         <h2><a href="/store">Store</a></h2>
         {{#if loggedIn}}
           <button id="logout" class="btn-no-style">logout</button>
