--- a/views/aticles.handlebars
+++ b/views/aticles.handlebars
@@ -17,13 +17,20 @@
   </div>
   <p class="article-text">{{article.article_text_2}}</p>
   <div class="comments">
-    <h5>Comments:</h5>
+    <h5>Comments: <span>(must be logged in to leave comments)</span></h5>
     {{#if loggedIn}}
-      <h2>Logged In</h2>
+      <form id="new-comment">
+        <textarea
+          name="comment-area"
+          id="comment-area"
+          cols="50"
+          rows="5"
+        ></textarea>
+        <button type="submit">Submit</button>
+      </form>
     {{else}}
       <h2>Logged Out</h2>
     {{/if}}
-
     {{#each article.article_comments as |article_comment|}}
       <div class="comment">
         <p class="comment-text">{{comment_text}}<span>
