--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
   <form class="login-form">
     <div class="form-label-input">
       <label class="form-label" for="email-login">Email:</label>
-      <input class="form-input" type="text" id="email-login" />
+      <input class="form-input" type="email" id="email-login" />
     </div>
     <div class="form-label-input">
       <label class="form-label" for="password-login">Password:</label>
@@ -19,7 +19,7 @@
     </div>
     <div class="form-label-input">
       <label class="form-label" for="email-signup">Email:</label>
-      <input class="form-input" type="text" id="email-signup" />
+      <input class="form-input" type="email" id="email-signup" />
     </div>
     <div class="form-label-input">
       <label class="form-label" for="password-signup">Password:</label>
