--- a/views/store.handlebars
+++ b/views/store.handlebars
@@ -6,7 +6,7 @@
   <img
     class="images-art"
     src="/images/Long-Shot-Box.jpg"
-    alt="long shot box art"
+    alt="Long Shot: The Dice Game"
   />
   <h3>
     Long Shot: The Dice Game
@@ -18,7 +18,11 @@
   href="https://www.miniaturemarket.com/ffgti07.html"
   target="_blank"
 >
-  <img class="images-art" src="/images/TI-Box.png" alt="twilight imperium" />
+  <img
+    class="images-art"
+    src="/images/TI-Box.png"
+    alt="Twilight Imperium: Fourth Edition"
+  />
   <h3>
     Twilight Imperium: Fourth Edition
   </h3>
@@ -29,7 +33,7 @@
   href="https://www.miniaturemarket.com/ffgce01-42.html"
   target="_blank"
 >
-  <img class="images-art" src="/images/Cosmic-Box.jpg" alt="cosmic box" />
+  <img class="images-art" src="/images/Cosmic-Box.jpg" alt="Cosmic Encounter" />
   <h3>
     Cosmic Encounter
   </h3>
@@ -43,7 +47,7 @@
   <img
     class="images-art"
     src="/images/Picture-Perfect-Box.png"
-    alt="picture perfect box"
+    alt="Picture Perfect"
   />
   <h3>
     Picture Perfect
