--- a/views/aticles.handlebars
+++ b/views/aticles.handlebars
@@ -17,7 +17,7 @@
   </div>
   <p class="article-text">{{article.article_text_2}}</p>
   <div class="comments">
-    <h5>Comments: <span>(must be logged in to leave comments)</span></h5>
+    <h5>Comments:</h5>
     {{#if loggedIn}}
       <form id="new-comment">
         <textarea
@@ -29,14 +29,14 @@
         <button type="submit">Submit</button>
       </form>
     {{else}}
-      <h2>Logged Out</h2>
+      <p>You Must <a href="/login">Login</a> to Leave Comments!</p>
     {{/if}}
-    {{#each article.article_comments as |article_comment|}}
-      <div class="comment">
+    <div class="comments-display">
+      {{#each article.article_comments as |article_comment|}}
         <p class="comment-text">{{comment_text}}<span>
             ({{user.username}})</span></p>
-      </div>
-    {{/each}}
+      {{/each}}
+    </div>
   </div>
 </article>
 {{#if loggedIn}}
