Updated some images

--- a/views/store.handlebars
+++ b/views/store.handlebars
@@ -20,7 +20,7 @@
 >
   <img
     class="images-art"
-    src="/images/TI-Box.png"
+    src="/images/TI-Box.jpg"
     alt="Twilight Imperium: Fourth Edition"
   />
   <h3>
@@ -46,7 +46,7 @@
 >
   <img
     class="images-art"
-    src="/images/Picture-Perfect-Box.png"
+    src="/images/Picture-Perfect-Box.jpg"
     alt="Picture Perfect"
   />
   <h3>
