--- a/views/forum-homepage.handlebars
+++ b/views/forum-homepage.handlebars
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>please for the love of fuck, WORK</h1>
-</body>
-</html>
+{{#each posts as |post|}}
+  <a class="threads" href="/post/{{id}}">
+    <h3>
+      {{post.title}}
+    </h3>
+    <p>{{comment_text}}</p>
+    <p>posted by {{user_id}} at {{created_at}}</p>
+  </a>
+{{/each}}
