--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,7 @@
       src="/images/{{article.images.0.filename}}"
       alt="{{article.title}}"
     />
-    <h3>
+    <h3 id="homepage-icon-titles">
       {{article.title}}
     </h3>
   </a>
