grabbing changes from dev

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -2,9 +2,9 @@
   <h3>
     {{post.title}}
   </h3>
-  <h7 id="threadPoster">Posted by {{post.user.username}}</h7>
+  <h7 id="threadPoster">Posted by {{post.user.username}} at {{post.time created wait for john}}</h7>
 
-  <p id="ThreadContent">{{post_content}}</p>
+  <p id="ThreadContent">{{post.post_content}}</p>
   <h4></h4>
 </div>
 
