--- a/views/forum-homepage.handlebars
+++ b/views/forum-homepage.handlebars
@@ -1,6 +1,6 @@
 {{#each posts as |post|}}
 <div class="threads">
-  <a id ="threadLink" href="/post/{{id}}">
+  <a id ="threadLink" href="/forum/forum-post/{{id}}">
     <h3>
       {{post.title}}
     </h3>
