--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 {{#each articles as |article|}}
   <a class="games" href="/article/{{id}}">
     <img
-      class="images-art"
+      class="homepage-images-art"
       src="/images/{{article.images.0.filename}}"
       alt="{{article.title}}"
     />
