--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,8 +13,11 @@
   </head>
   <body>
     <header>
-      <h1><a href="/">Copy Cat Games</a>
+      <div id="logoAndTitle">
+        <img src="/images/copycatlogo.png" id="logo" alt="logo for page">
+      <h1 id="titleOfSite"><a href="/">Copy Cat Games</a>
       </h1>
+      </div>
       <nav>
         <h2><a href="/forum">Forums</a></h2>
         <h2><a href="/store">Store</a></h2>
