--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,26 @@
+
+{{!-- below is a carousel I got working but cannot figure out the image size disparity --}}
+
+{{!-- <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/images/bannerSagaBanner.webp" id="banner" class="d-block w-100" alt="a carousel of rotating game images, slide one">
+    </div>
+    <div class="carousel-item">
+      <img src="/images/cthuluBanner.png" id="banner" class="d-block w-100" alt="a carousel of rotating game images, slide two">
+    </div>
+    <div class="carousel-item">
+      <img src="/images/40kBanner.webp" id="banner" class="d-block w-100" alt="a carousel of rotating game images, slide three">
+    </div>
+  </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script>var myCarousel = document.querySelector('#myCarousel')
+var carousel = new bootstrap.Carousel(myCarousel)</script> --}}
+
 {{#each articles as |article|}}
   <a class="games" href="/article/{{id}}">
     <img
