--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,41 +1,42 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Copy Cat Games</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Smokum&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-  </head>
-  <body>
-    <header>
-      <div id="logoAndTitle">
-        <img src="/images/copycatlogo.png" id="logo" alt="logo for page">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Copy Cat Games</title>
+{{!--  here is the bootstrap cdn, for some reason it ignores the text decoration rules in the css  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"> --}}
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Smokum&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="/stylesheets/style.css" />
+</head>
+
+<body>
+  <header>
+    <div id="logoAndTitle">
+      <img src="/images/copycatlogo.png" id="logo" alt="logo for page">
       <h1 id="titleOfSite"><a href="/">Copy Cat Games</a>
       </h1>
-      </div>
-      <nav>
-        <h2><a href="/forum">Forums</a></h2>
-        <h2><a href="/store">Store</a></h2>
-        {{#if loggedIn}}
-          <h2><a id="logout" href="/">Logout</a></h2>
-        {{else}}
-          <h2><a href="/login">Login</a></h2>
-        {{/if}}
-      </nav>
-    </header>
-    <main>
-      {{{body}}}
-    </main>
-    <footer>
-      <h6>Created By Casey, Kole, John, and Amir</h6>
-    </footer>
-    {{#if loggedIn}}
-      <script src="/js/logout.js"></script>
-    {{/if}}
-  </body>
+    </div>
+    <nav>
+      <h2><a href="/forum">Forums</a></h2>
+      <h2><a href="/store">Store</a></h2>
+      {{#if loggedIn}}
+      <h2><a id="logout" href="/">Logout</a></h2>
+      {{else}}
+      <h2><a href="/login">Login</a></h2>
+      {{/if}}
+    </nav>
+  </header>
+  <main>
+    {{{body}}}
+  </main>
+  <footer>
+    <h6>Created By Casey, Kole, John, and Amir</h6>
+  </footer>
+  {{#if loggedIn}}
+  <script src="/js/logout.js"></script>
+  {{/if}}
+</body>
+
 </html>
