--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div id="logoAndTitle">
-      <img src="/images/copycatlogo.png" id="logo" alt="logo for page">
+      <div><a href="/" id="logo"><img src="/images/copycatlogo.png" alt="logo for page"></a></div>
       <h1 id="titleOfSite"><a href="/">Copy Cat Games</a>
       </h1>
     </div>
