--- a/views/forum-homepage.handlebars
+++ b/views/forum-homepage.handlebars
@@ -1,7 +1,7 @@
 {{#each posts as |post|}}
 <div class="threads">
   <a id ="threadLink" href="/forum/forum-post/{{id}}">
-    <h3>
+    <h3 class="forumTitle">
       {{post.title}}
     </h3>
     </a>
