fixed carousel and added links and clickable directions
left old carousel in comments just in case

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,6 +33,15 @@ header {
    width: 10%;
  }
 
+#myCarousel {
+  width: 80vw;
+  height: auto;
+}
+
+#banner {
+border-radius: 25px;
+}
+
 h1 {
   margin: 20px;
 }
