--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,8 +1,8 @@
 <div class="threads">
-  <h3>
+  <h3 id="threadTitle">
     {{post.title}}
   </h3>
-  <h7 id="threadPoster">Posted by {{post.user.username}} at {{post.time created wait for john}}</h7>
+  <h7 id="threadPoster">Posted by {{post.user.username}} at {{!-- {{post.time created wait for john}} --}}</h7>
 
   <p id="ThreadContent">{{post.post_content}}</p>
   <h4></h4>
