--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,12 +19,12 @@
       </h1>
     </div>
     <nav>
-      <h2><a href="/forum">Forums</a></h2>
-      <h2><a href="/store">Store</a></h2>
+      <h2><a href="/forum" class="text-decoration-none">Forums</a></h2>
+      <h2><a href="/store" class="text-decoration-none">Store</a></h2>
       {{#if loggedIn}}
-      <h2><a id="logout" href="/">Logout</a></h2>
+      <h2><a id="logout" class="text-decoration-none" href="/">Logout</a></h2>
       {{else}}
-      <h2><a href="/login">Login</a></h2>
+      <h2><a href="/login" class="text-decoration-none">Login</a></h2>
       {{/if}}
     </nav>
   </header>
