--- a/views/aticles.handlebars
+++ b/views/aticles.handlebars
@@ -34,7 +34,8 @@
     <div class="comments-display">
       {{#each article.article_comments as |article_comment|}}
         <p class="comment-text">{{comment_text}}<span>
-            ({{user.username}})</span></p>
+            ({{user.username}})
+            {{format_date created_at}}</span></p>
       {{/each}}
     </div>
   </div>
