added comments on js on line 30 in single-post.handlebars

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -27,5 +27,5 @@
 </div>
 </article>
 {{#if loggedIn}}
-<script src="/js/article_comment.js"></script>
+<script src="/js/article_comment.js"></script>{{!-- probably need to make forum-comment.js as i dont see one made by casey --}}
 {{/if}}
