--- a/views/aticles.handlebars
+++ b/views/aticles.handlebars
@@ -25,6 +25,7 @@
           id="comment-area"
           cols="50"
           rows="5"
+          placeholder="Say Something Nice"
         ></textarea>
         <button type="submit">Submit</button>
       </form>
