--- a/views/forum-dashboard.handlebars
+++ b/views/forum-dashboard.handlebars
@@ -1,17 +1,28 @@
 <section>
   <h2>Create New Post</h2>
 
-<div class="comments">
-  <form class="new-post-form">
-    <div>
-      <label for="post-title">Title</label>
-      <input type="text" id="comment-area" name="post-title" class="form-input" />
-    </div>
-    <div>
-      <label for="post-url">Post Description</label>
-      <input id="comment-area" name="post-url" class="form-input" />
-    </div>
-    <button type="submit" class="form-button">Create</button>
-  </form>
-</div>
+  <div class="comments">
+    <form class="new-post-form">
+      <div>
+        <label for="post-title">Title</label>
+        <input
+          type="text"
+          id="comment-area"
+          name="post-title"
+          class="form-input"
+          placeholder="Your Title"
+        />
+      </div>
+      <div>
+        <label for="post-url">Post</label>
+        <input
+          id="comment-area"
+          name="post-url"
+          class="form-input"
+          placeholder="Your Post Text"
+        />
+      </div>
+      <button type="submit" class="form-button">Create</button>
+    </form>
+  </div>
 </section>
