--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -13,7 +13,7 @@
   <div class="comments-display">
     {{#if loggedIn}}
     <form id="new-comment">
-      <textarea name="comment-area" id="comment-area" cols="50" rows="5"></textarea>
+      <textarea name="comment-area" id="comment-area" cols="50" rows="5" placeholder="Say Something Nice"></textarea>
       <button type="submit">Submit</button>
     </form>
     {{else}}
