--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -28,5 +28,5 @@
 </div>
 </article>
 {{#if loggedIn}}
-<script src="/js/article_comment.js"></script>{{!-- probably need to make forum-comment.js as i dont see one made by casey --}}
+<script src="/js/forum-comment.js"></script>
 {{/if}}
