changed input to text area for post create

--- a/views/forum-dashboard.handlebars
+++ b/views/forum-dashboard.handlebars
@@ -15,12 +15,12 @@
       </div>
       <div>
         <label for="post-url">Post</label>
-        <input
+        <textarea
           id="comment-area"
           name="post-url"
           class="form-input"
           placeholder="Your Post Text"
-        />
+        ></textarea>
       </div>
       <button type="submit" class="form-button">Create</button>
     </form>
