got comments to show up

--- a/views/forum-homepage.handlebars
+++ b/views/forum-homepage.handlebars
@@ -20,6 +20,8 @@
     <h7 id="threadPoster">Posted by
       {{user.username}}
       {{format_date createdAt}}
+      comment(s)
+      {{forum_comments.length}}
     </h7>
 
     <p id="ThreadContent">{{post_content}}</p>
