fixed underline issues

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -59,7 +59,7 @@
   var carousel = new bootstrap.Carousel(myCarousel)</script>
 
 {{#each articles as |article|}}
-<a class="games" href="/article/{{id}}">
+<a class="games text-decoration-none" href="/article/{{id}}">
   <img class="homepage-images-art" src="/images/{{article.images.0.filename}}" alt="{{article.title}}" />
   <h3 id="homepage-icon-titles">
     {{article.title}}
