--- a/views/store.handlebars
+++ b/views/store.handlebars
@@ -1,5 +1,5 @@
 <a
-  class="games"
+  class="games text-decoration-none"
   href="https://www.miniaturemarket.com/pex2002.html"
   target="_blank"
 >
@@ -14,7 +14,7 @@
 </a>
 
 <a
-  class="games"
+  class="games text-decoration-none"
   href="https://www.miniaturemarket.com/ffgti07.html"
   target="_blank"
 >
@@ -29,7 +29,7 @@
 </a>
 
 <a
-  class="games"
+  class="games text-decoration-none"
   href="https://www.miniaturemarket.com/ffgce01-42.html"
   target="_blank"
 >
@@ -40,7 +40,7 @@
 </a>
 
 <a
-  class="games"
+  class="games text-decoration-none"
   href="https://www.miniaturemarket.com/awgaw10pp.html"
   target="_blank"
 >
