--- a/views/aticles.handlebars
+++ b/views/aticles.handlebars
@@ -16,7 +16,9 @@
     />
   </div>
   <p class="article-text">{{article.article_text_2}}</p>
+
   {{#if loggedIn}}
+  <div class="comments">
     <form id="new-comment">
       <textarea
         name="comment-area"
@@ -27,13 +29,15 @@
       ></textarea>
       <button type="submit">Submit</button>
     </form>
+    </div>
   {{else}}
-    <p>You Must <a href="/login">Login</a> to Leave Comments!</p>
-  {{/if}}
   <div class="comments">
+    <p>You Must <a href="/login">Login</a> to Leave Comments!</p>
+  </div>
+  {{/if}}
 
+  <div class="comments">
     <h5>Comments:</h5>
-
     <div class="comments-display">
       {{#each article.article_comments as |article_comment|}}
         <p></p>
