Fixed car error

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -103,8 +103,7 @@
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
   crossorigin="anonymous"
 ></script>
-<script>var myCarousel = document.querySelector('#myCarousel') var carousel =
-  new bootstrap.Carousel(myCarousel)</script>
+<script>var myCarousel = document.querySelector('#myCarousel') </script>
 
 {{#each articles as |article|}}
   <a class="games" href="/article/{{id}}">
