fixed css for new comment box on single-post

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -10,10 +10,12 @@
 
 
 {{#if loggedIn}}
+<div class="comments">
     <form id="new-comment">
       <textarea name="comment-area" id="comment-area" cols="50" rows="5" placeholder="Say Something Nice"></textarea>
       <button type="submit">Submit</button>
     </form>
+</div>
     {{else}}
     <p>You Must <a href="/login">Login</a> to Leave Comments!</p>
     {{/if}}
